--- a/SimpleForum/Views/Home/Index.cshtml
+++ b/SimpleForum/Views/Home/Index.cshtml
@@ -1,14 +1,31 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
+﻿@model IEnumerable<Forum>
+@{
+    ViewData["Title"] = "Forum";
 }
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    
-    
 </div>
 
 <div>
-    
+    <a class="btn btn-primary" asp-controller="" asp-action"">Add new forum</a>
+</div>
+
+<div class="row">
+    <div class="col-6">
+        <table class="table table-bordered table-striped">            
+            @foreach(var forum in Model)
+            {
+                <tr>
+                    <td>
+                        @forum.Title
+                    </td>
+                    <td>
+                        @forum.Description
+                    </td>
+                </tr>
+            }
+        </table>
+    </div>
 </div>
 
