Fixs Index, HomeController

--- a/SimpleForum/Views/Home/Index.cshtml
+++ b/SimpleForum/Views/Home/Index.cshtml
@@ -8,7 +8,7 @@
 </div>
 
 <div>
-    <a class="btn btn-primary" asp-controller="" asp-action"">Add new forum</a>
+    <a class="btn btn-primary" asp-controller="CreateForum" asp-action="Index">Add new forum</a>
 </div>
 
 <div class="row">
