--- a/SimpleForum/Views/Home/Index.cshtml
+++ b/SimpleForum/Views/Home/Index.cshtml
@@ -18,7 +18,7 @@
             {
                 <tr>
                     <td>
-                        @forum.Title
+                        <a asp-action="DetailForum" asp-action="Index" asp-route-idForum="@forum.Id">@forum.Title</a>
                     </td>
                     <td>
                         @forum.Description
